Fixing security issue